# cpctools

./: .gitignore  .gitmodules  .travis.yml  AMSDOScope.pl  Dockerfile  README.md  appveyor.yml  docker-build.sh  dockerfile.sh
CapIHM/: CapriceAboutImpl.cpp  CapriceAboutImpl.h  CapriceApp.cpp  CapriceApp.h  CapriceRegistersDialogImpl.cpp  CapriceRegistersDialogImpl.h  CapriceUI.cpp  CapriceUI.h  CapriceWindowImpl.cpp  CapriceWindowImpl.h  ChangeLog  Keymap.cfg  Makefile.am  Makefile.in  SDLPanel.cpp  SDLPanel.h  TODO  aclocal.m4  audio.cpp  audio.h  autogen.sh  c_bool.h  c_inifile.h  callgrind.out.25379  cap32.cfg  cap32.cfg.tpl  cap32.cpp  cap32type.h  caprice  config.cpp  config.h  configBis.h.in  configure  configure.ac  crtc.cpp  crtc.h  drv-SDL.cpp  dsk.cpp  emulator.cpp  emulator.h  (+24 more)
CapIHM/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
CapIHM/aylet/: drv-obsd.c  edops.c  sound.h  ui.c  z80.h
CapIHM/src/: Makefile.am  Makefile.in
CapIHM/src/asm/: CapASM.cpp  CapASM.h  Makefile.am
CapIHM/src/aylet/: cbops.c  driver.h  sound.cc  z80ops.c
CapIHM/src/cli/: Makefile.am  caprice.cli  caprice_cli_routs.cpp  caprice_cli_routs.h  cparser_caprice.c  cparser_io.h  cparser_line.c  cparser_options.h  cparser_priv.h  cparser_token.c  cparser_token.cfg  cparser_token_tbl.c  cparser_tree.c  cparser_tree.h  mk_parser.py  test_parser.c
CapIHM/src/core/: CPCKeyDefs.h  Desass.cpp  Desass.h  IMG_savepng.cpp  IMG_savepng.h  Makefile.am  Makefile.in  Outils.cpp  audio.cpp  audio.h  c_inifile.cpp  cap32.cpp  cap32type.h  config.cpp  config.h  crtc.cpp  crtc.h  crtc1.cpp  crtc1.h  debug.h  dsk.cpp  dsk.h  emulator.cpp  emulator.h  fdc.h  fdc_765.cpp  fdc_765.h  fdc_old.cpp  fdc_old.h  filetools.cpp  filetools.h  fileutils.cpp  gatearray.cpp  gatearray.h  glfunclist.h  glfuncs.cpp  glfuncs.h  input.cpp  input.h  ioport.cpp  (+22 more)
CapIHM/src/gui/: CPCKeyDefs.h  CapriceAboutImpl.cpp  CapriceApp.cpp  CapriceApp.h  CapriceIDE.cpp  CapriceIDE.h  CapriceInputSettingsImpl.cpp  CapriceInputSettingsImpl.h  CapriceRegistersDialogImpl.cpp  CapriceUI.cpp  CapriceUI.h  CapriceWindowImpl.cpp  CapriceWindowImpl.h  DiscEditor.cpp  DiscEditor.h  Makefile  Makefile.am  Makefile.in  MemoryImpl.cpp  MemoryImpl.h  WXEmulator.cpp  WXEmulator.h  WXVideo.cpp  WXVideo.h  input.cpp  ui.fbp  video.cpp
Reloaded/: CMakeLists.txt  ChangeLog  Doxyfile  Keymap.cfg  Makefile.am  README  TODO  autogen.sh  cap32.cfg.tpl  configure.ac  crossWin.cmake
Reloaded/cmake/: ActivateCXX11.cmake  crossWin.cmake
Reloaded/debian/: changelog  control  control.in  copyright  rules
Reloaded/src/: Makefile.am
Reloaded/src/aop/: alsaAudioPlugin.cpp  alsaAudioPlugin.h  portAudioAudioPlugin.cpp  portAudioAudioPlugin.h
Reloaded/src/asm/: CapASM.cpp  CapASM.h  Makefile.am
Reloaded/src/aylet/: main.c  sound.cc  z80.c
Reloaded/src/cli/: Makefile.am  caprice.cli  caprice_cli_routs.cpp  caprice_cli_routs.h  cparser.c  cparser.h  cparser_caprice.c  cparser_fsm.c  cparser_fsm.h  cparser_io_unix.c  cparser_line.h  cparser_token.h  cparser_tree.c  cparser_tree.h  cparser_tree_unix.c  test_cli_cmd.c  test_fsm.c  test_token.c
Reloaded/src/core/: CMakeLists.txt  Desass.cpp  Desass.h  IMG_savepng.cpp  IMG_savepng.h  Makefile.am  alsaAudioPlugin.cpp  alsaAudioPlugin.h  audio.cpp  audio.h  audioPlugin.h  cap32.h  cap32type.h  config.cpp  config_manager.cpp  config_manager.h  crtc.cpp  crtc.h  crtc1.cpp  crtc1.h  debug.h  dsk.cpp  dsk.h  emulator.cpp  emulator.h  fdc.cpp  fdc.h  fdc_765.cpp  fdc_765.h  fdc_old.cpp  fdc_old.h  filetools.cpp  gatearray.cpp  gatearray.h  glfunclist.h  input.cpp  input.h  ioport.cpp  ioport.h  log.cpp  (+27 more)
Reloaded/src/gui/: CMakeLists.txt  CapriceAboutImpl.h  CapriceApp.cpp  CapriceApp.h  CapriceIDE.cpp  CapriceIDE.h  CapriceInputSettingsImpl.cpp  CapriceInputSettingsImpl.h  CapriceRegistersDialogImpl.cpp  CapriceRegistersDialogImpl.h  CapriceUI.cpp  CapriceUI.h  CapriceUIWrapper.cpp  CapriceWindowImpl.cpp  CapriceWindowImpl.h  DiscEditor.cpp  DiscEditor.h  Makefile.am  MemoryImpl.cpp  MemoryImpl.h  SDLVideo.cpp  SDLVideo.h  WXEmulator.cpp  WXEmulator.h  WXLog.h  WXVideo.cpp  WXVideo.h  ui.fbp
Reloaded/src/gui_be/: CMakeLists.txt  Makefile.am  RApp.cpp  RApp.h  RAudio.h  RBitmapView.h  REmulator.cpp  REmulator.h  RVideo.cpp  RVideo.h  RWin.cpp  RWin.h  Reloaded.rdef  Reloaded_haiku_icon.rdef
Reloaded/src/misc/: Desass.cpp  Desass.h  Semaphore.h  (+6 more)
cpctools/: AUTHORS  BUGS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
cpctools/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
cpctools/cmake/: CheckSharedLibraryExists.cmake
cpctools/debian/: README  README.Debian  changelog  control  control.in  copyright  cpctools--default  cpctools-1.1.doc-base.EX  cpctools-dev.install  cpctools.install  files  libstsound-cpc-dev.install  libstsound-cpc1.install  rules
cpctools/lib/: CCPCSnapshot.cpp  CCPCSnapshot.h  CMakeLists.txt  Makefile.am  Makefile.in  README  TODO  dllexport.h
cpctools/tools/: CMakeLists.txt  Makefile.in  cpcDSK.cpp  createSnapshot.cpp  dataDBGenerator.cpp
iDSK/src/: Basic.cpp  BitmapCPC.cpp  Dams.cpp  Desass.cpp  GestDsk.cpp  GestDsk.h  Main.cpp  Main.h  Makefile  Makefile.am  Makefile.in  Outils.cpp  Outils.h  ViewFile.cpp  ViewFile.h  endianPPC.cpp  getopt_pp.cpp  getopt_pp.h
libstsound/: AUTHORS  COPYING  Makefile.am  README  StSoundLibrary.cbp  StSoundLibrary.h  StSoundLibrary.sln  StSoundLibrary.vcproj  StSoundLibrary.vcxproj  Ym2149Ex.cpp  Ym2149Ex.h  YmFilters.cpp  YmFilters.h  YmMusic.cpp  YmMusic.h  YmProfiles.h  YmTypes.h  YmUserInterface.cpp  Ymload.cpp  Ymload.h  build_config.sh  configure.ac
libstsound/LZH/: LZH.H  LzhLib.cpp
ufitoolbox/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.in  ufi_command.c  ufi_command.h  ufi_detect.c  ufi_detect.h  ufi_format.c  ufiformat.man
ufitoolbox/.deps/: ufi_command.Po  ufi_detect.Po  ufi_format.Po
(+1003 files in other folders)
